<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/buttongradient"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/caviardreams"
        android:text="@string/rsa_chat">

    </TextView>

    <Button
        android:id="@+id/btn_register_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone">

    </Button>

    <Button
        android:id="@+id/btn_login_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:textColorHint="@color/white"
        android:visibility="gone">

    </Button>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</LinearLayout>