<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@drawable/buttongradient">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.RSAChat.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDarker"
        app:popupTheme="@style/Theme.RSAChat.PopupOverlay">
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="16dp"
android:gravity="center_horizontal"
android:orientation="vertical"
android:layout_centerInParent="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/colorgrey"
        app:boxBackgroundColor="@color/colorChatRight"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:textColor="@color/colorProfile"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:textColorHint="@color/colorgrey"
        app:boxBackgroundColor="@color/colorChatRight"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:textColor="@color/colorProfile"
            />

    </com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/btn_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:elevation="8dp"
    android:layout_marginTop="25dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    android:backgroundTint="@color/colorChatRight">

</Button>

</LinearLayout>

</RelativeLayout>