<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSoftDark"
    tools:context=".fragments.SettingsFragment">

   <androidx.cardview.widget.CardView
       android:id="@+id/card_1"
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintBottom_toTopOf="@+id/check_notifications_settings"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginBottom="10dp"
       android:backgroundTint="@color/colorChatRight"
       app:layout_constraintTop_toTopOf="parent">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/colorChatRight">

         <ImageView
             android:id="@+id/cover_settings"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:elevation="2dp"
             android:fadingEdgeLength="10dp"
             android:outlineProvider="bounds"
             android:scaleType="centerCrop"
             android:src="@drawable/coverdefault" />

         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profileimage_settings"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="140dp"
             android:elevation="2dp"
             android:outlineProvider="bounds"
             android:scaleType="centerCrop"
             android:src="@drawable/profile_1" />


         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/username_layout_settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/profileimage_settings"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             android:hint="@string/username"
             android:textColorHint="@color/colorgrey"
             app:boxBackgroundColor="@color/colorSoftDark"
             app:boxCornerRadiusTopEnd="15dp"
             app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/aboutme_layout_settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/username_layout_settings"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:hint="@string/about_mehint"
             android:minHeight="150dp"
             android:textColorHint="@color/colorgrey"
             app:boxBackgroundColor="@color/colorSoftDark"
             app:boxCornerRadiusTopEnd="15dp"
             app:boxCornerRadiusTopStart="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aboutme_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:textColor="@color/white" />

         </com.google.android.material.textfield.TextInputLayout>

      </RelativeLayout>
   </androidx.cardview.widget.CardView>

   <com.google.android.material.switchmaterial.SwitchMaterial
       android:id="@+id/check_notifications_settings"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_margin="10dp"
       android:checked="true"
       android:text="@string/notifications"
       android:textColor="@color/colorProfile"
       app:layout_constraintBottom_toTopOf="@+id/linearLayout"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   <LinearLayout
       android:id="@+id/linearLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/card_1"
       android:background="@color/colorProfile"
       android:gravity="center"

       android:orientation="horizontal"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent">

      <ImageView
          android:id="@+id/facebook_settings"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:layout_marginTop="2dp"
          android:background="@drawable/ic_facebook"
          android:scaleType="centerCrop" />

      <ImageView
          android:id="@+id/instagram_settings"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:layout_marginStart="15dp"
          android:layout_marginTop="2dp"
          android:layout_marginEnd="15dp"
          android:background="@drawable/ic_instagram"
          android:scaleType="centerCrop" />

      <ImageView
          android:id="@+id/website_settings"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:layout_marginTop="2dp"
          android:background="@drawable/website"
          android:scaleType="centerCrop" />

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>